MW, primarily updated notebooks

--- a/data_cleanup.ipynb
+++ b/data_cleanup.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,8 @@
     "    processed_transcripts.extend(processed)\n",
     "\n",
     "# Optionally, write the processed data to a new JSON file\n",
-    "output_path = 'data/processed_news_dialogue_sample.json'\n",
+    "# output_path = 'data/processed_news_dialogue_sample.json'\n",
+    "output_path = 'data/test.json'\n",
     "with open(output_path, 'w') as outfile:\n",
     "    json.dump(processed_transcripts, outfile, indent=4)\n",
     "\n",
