--- a/data_exploration.ipynb
+++ b/data_exploration.ipynb
@@ -19,8 +19,8 @@
       "   Total Transcripts: 246\n",
       "   Fully Graded Transcripts: 246\n",
       "MW_merge\n",
-      "   Total Transcripts: 203\n",
-      "   Fully Graded Transcripts: 200\n"
+      "   Total Transcripts: 205\n",
+      "   Fully Graded Transcripts: 202\n"
      ]
     }
    ],
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,113 +129,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'given': 'none', 'could': 'hedge'}\n",
       "{}\n",
-      "{'about': 'none'}\n",
-      "{'all': 'none', 'every': 'none', 'quite': 'none', 'wonder': 'none', 'well': 'none'}\n",
-      "{'think': 'hedge'}\n",
-      "{'every': 'none', 'thing': 'none'}\n",
-      "{'all': 'none', 'every': 'none', 'about': 'none', 'hedge': 'none', 'thing': 'none', 'sold': 'none', 'perspective': 'none'}\n",
-      "{}\n",
-      "{'all': 'none'}\n",
-      "{'every': 'none', 'know': 'hedge', 'could': 'hedge', 'think': 'hedge', 'thing': 'none'}\n",
-      "{'every': 'none'}\n",
-      "{'sole': 'none'}\n",
-      "{'all': 'none', 'well-known': 'none', 'allegedly': 'hedge', 'wrong': 'none', 'feeling': 'none', 'well': 'none'}\n",
-      "{'take': 'none'}\n",
-      "{'all': 'none', 'know': 'hedge', 'about': 'none', 'kind of': 'hedge', 'sort of': 'hedge', 'seem': 'hedge', 'question': 'none', 'thing': 'none', 'well': 'none'}\n",
-      "{'all': 'none'}\n",
-      "{}\n",
-      "{}\n",
-      "{'best': 'none', 'all': 'none', 'amend': 'none'}\n",
-      "{'all': 'none', 'could': 'hedge', 'might': 'hedge', 'often': 'none', 'sort of': 'hedge', 'question': 'none', 'well': 'none'}\n",
-      "{'only': 'none'}\n",
-      "{'absolutely': 'authority'}\n",
-      "{}\n",
-      "{'best': 'none', 'every': 'none', 'know': 'none', 'only': 'none', 'probably': 'hedge', 'maybe': 'hedge', 'thing': 'none'}\n",
-      "{'take': 'none'}\n",
+      "{'sure': 'hedge', 'well': 'none'}\n",
+      "{'all': 'none', 'every': 'none', 'need to': 'authority', 'think': 'hedge', 'a little': 'hedge', 'hope': 'hedge'}\n",
       "{'most important': 'none', 'all': 'none'}\n",
-      "{'all': 'none'}\n",
-      "{'certainly': 'authority', 'obvious': 'none', 'only': 'none', 'about': 'none', 'think': 'hedge', 'kind of': 'hedge', 'thing': 'none'}\n",
-      "{'might': 'hedge', 'reduce': 'none', 'perspective': 'none'}\n",
+      "{'might': 'hedge', 'take': 'none'}\n",
       "{}\n",
+      "{'all': 'none', 'sort of': 'hedge', 'thing': 'none'}\n",
+      "{}\n",
+      "{'clear': 'none', 'could': 'hedge', 'should': 'authority', 'about': 'none', 'think': 'hedge', 'question': 'none', 'change': 'none', 'adjust': 'none', 'well': 'none'}\n",
+      "{'all': 'none', 'well': 'none'}\n",
+      "{'might': 'hedge', 'reduce': 'none', 'perspective': 'none'}\n",
+      "{'every': 'none', 'know': 'hedge', 'could': 'hedge', 'think': 'hedge', 'thing': 'none'}\n",
       "{'all': 'none', 'clear': 'none', 'may': 'hedge', 'question': 'none', 'thing': 'none'}\n",
       "{'all': 'none'}\n",
-      "{'all': 'none', 'every': 'none'}\n",
-      "{'all': 'none', 'every': 'none', 'quite': 'none', 'about': 'none', 'take': 'none'}\n",
-      "{}\n",
-      "{'all': 'none', 'change': 'none'}\n",
-      "{'view': 'none', 'torn': 'none'}\n",
       "{'all': 'none'}\n",
-      "{'all': 'none', 'about': 'none', 'question': 'none'}\n",
-      "{'all': 'none', 'take': 'none'}\n",
+      "{'somewhat': 'hedge'}\n",
+      "{'all': 'none', 'clear': 'none', 'question': 'none'}\n",
+      "{}\n",
+      "{'sometimes': 'hedge', 'maybe': 'hedge', 'moderate': 'none', 'thing': 'none', 'well': 'none'}\n",
+      "{'take': 'none', 'well': 'none'}\n",
+      "{'all': 'none', 'wrong': 'none', 'take': 'none'}\n",
+      "{'all': 'none', 'about': 'none', 'probably': 'hedge', 'view': 'none', 'appear': 'none', 'thing': 'none'}\n",
+      "{}\n",
+      "{'all': 'none', 'about': 'none', 'thing': 'none'}\n",
+      "{'take': 'none'}\n",
+      "{'all': 'none', 'always': 'none', 'final word': 'none', 'quite': 'none', 'perhaps': 'hedge', 'kind of': 'hedge', 'well': 'none'}\n",
       "{}\n",
       "{'may': 'hedge'}\n",
-      "{'well': 'none'}\n",
-      "{'clear': 'none', 'could': 'hedge', 'should': 'authority', 'about': 'none', 'think': 'hedge', 'question': 'none', 'change': 'none', 'adjust': 'none', 'well': 'none'}\n",
-      "{'all': 'none', 'may': 'hedge', 'around': 'none', 'perhaps': 'hedge', 'take': 'none', 'appear': 'none', 'avoid': 'none', 'thing': 'none', 'sold': 'none'}\n",
-      "{}\n",
-      "{'sort of': 'hedge', 'take': 'none', 'alter': 'none', 'thing': 'none'}\n",
-      "{'all': 'none', 'believe': 'hedge'}\n",
-      "{'best': 'none', 'should': 'authority', 'about': 'none', 'take': 'none', 'view': 'none', 'question': 'none'}\n",
-      "{}\n",
-      "{'sometimes': 'hedge'}\n",
       "{'all': 'none', 'every': 'none', 'reality': 'none', 'about': 'none', 'reportedly': 'hedge', 'expect': 'none', 'question': 'none', 'thing': 'none', 'well': 'none'}\n",
-      "{'truth': 'none', 'take': 'none'}\n",
-      "{'all': 'none'}\n",
-      "{'all': 'none', 'about': 'none', 'probably': 'hedge', 'view': 'none', 'appear': 'none', 'thing': 'none'}\n",
-      "{'all': 'none', 'sort of': 'hedge', 'thing': 'none'}\n",
-      "{'sometimes': 'hedge', 'maybe': 'hedge', 'moderate': 'none', 'thing': 'none', 'well': 'none'}\n",
-      "{'take': 'none'}\n",
-      "{}\n",
-      "{'all': 'none'}\n",
-      "{'change': 'none'}\n",
-      "{'all': 'none', 'might': 'hedge', 'about': 'none', 'kind of': 'hedge', 'thing': 'none'}\n",
-      "{'all': 'none'}\n",
-      "{'all': 'none', 'every': 'none', 'need to': 'authority', 'have to': 'authority', 'know': 'none', 'sure': 'none', 'about': 'none', 'around': 'none', 'thing': 'none'}\n",
-      "{'completely': 'none'}\n",
-      "{'every': 'none', 'thing': 'none'}\n",
-      "{'all': 'none', 'about': 'none', 'thing': 'none'}\n",
-      "{'totally': 'none', 'would': 'hedge', 'about': 'none', 'kind of': 'hedge', 'tend': 'hedge', 'question': 'none', 'avoid': 'none'}\n",
-      "{'maybe': 'hedge', 'sold': 'none'}\n",
-      "{'about': 'none'}\n",
-      "{}\n",
-      "{'take': 'none', 'well': 'none'}\n",
-      "{'sure': 'hedge', 'well': 'none'}\n",
-      "{'might': 'hedge', 'take': 'none'}\n",
-      "{'all': 'none', 'always': 'none', 'final word': 'none', 'quite': 'none', 'perhaps': 'hedge', 'kind of': 'hedge', 'well': 'none'}\n",
-      "{'sometimes': 'hedge', 'about': 'none', 'reportedly': 'hedge', 'thing': 'none'}\n",
-      "{'all': 'none', 'well': 'none'}\n",
-      "{'all': 'none', 'about': 'none'}\n",
-      "{'all': 'none', 'wrong': 'none', 'take': 'none'}\n",
-      "{'all': 'none', 'clear': 'none', 'question': 'none'}\n",
-      "{'all': 'none', 'every': 'none', 'need to': 'authority', 'think': 'hedge', 'a little': 'hedge', 'hope': 'hedge'}\n",
-      "{}\n",
-      "{'perspective': 'none'}\n",
-      "{'obvious': 'none', 'about': 'none'}\n",
-      "{}\n",
-      "{'every': 'none'}\n",
-      "{}\n",
-      "{}\n",
-      "{'all': 'none', 'tend': 'none'}\n",
-      "{'all': 'none', 'clear': 'none', 'around': 'none', 'view': 'none', 'thing': 'none'}\n",
-      "{'all': 'none', 'about': 'none', 'think': 'hedge'}\n",
-      "{'somewhat': 'hedge'}\n",
-      "{'all': 'none', 'every': 'none', 'obvious': 'none', 'essential': 'none', 'apparent': 'none', 'may': 'hedge', 'might': 'hedge', 'about': 'none', 'around': 'none', 'maybe': 'hedge', 'think': 'hedge', 'kind of': 'hedge', 'sort of': 'hedge', 'seem': 'hedge', 'posit': 'none', 'change': 'none', 'temper': 'none', 'certain': 'none', 'positive': 'none'}\n",
-      "{'all': 'none', 'every': 'none'}\n",
       "{'all': 'none', 'thing': 'none', 'well': 'none'}\n",
-      "{'only': 'none', 'imagine': 'none', 'well': 'none'}\n",
+      "{'all': 'none', 'about': 'none', 'think': 'hedge'}\n",
+      "{'every': 'none', 'thing': 'none'}\n",
+      "{'think': 'hedge'}\n",
+      "{'all': 'none', 'may': 'hedge', 'around': 'none', 'perhaps': 'hedge', 'take': 'none', 'appear': 'none', 'avoid': 'none', 'thing': 'none', 'sold': 'none'}\n",
+      "{'about': 'none'}\n",
+      "{'change': 'none'}\n",
+      "{'all': 'none', 'well-known': 'none', 'allegedly': 'hedge', 'wrong': 'none', 'feeling': 'none', 'well': 'none'}\n",
+      "{'all': 'none', 'every': 'none'}\n",
+      "{'totally': 'none', 'would': 'hedge', 'about': 'none', 'kind of': 'hedge', 'tend': 'hedge', 'question': 'none', 'avoid': 'none'}\n",
+      "{'all': 'none', 'might': 'hedge', 'about': 'none', 'kind of': 'hedge', 'thing': 'none'}\n",
+      "{'well': 'none'}\n",
+      "{}\n",
+      "{}\n",
+      "{'all': 'none'}\n",
+      "{'sort of': 'hedge', 'take': 'none', 'alter': 'none', 'thing': 'none'}\n",
+      "{}\n",
+      "{'only': 'none'}\n",
+      "{'all': 'none', 'could': 'hedge', 'might': 'hedge', 'often': 'none', 'sort of': 'hedge', 'question': 'none', 'well': 'none'}\n",
+      "{'all': 'none', 'tend': 'none'}\n",
+      "{'all': 'none', 'every': 'none'}\n",
+      "{'given': 'none', 'could': 'hedge'}\n",
+      "{'sole': 'none'}\n",
+      "{'all': 'none'}\n",
+      "{'all': 'none', 'every': 'none', 'about': 'none', 'hedge': 'none', 'thing': 'none', 'sold': 'none', 'perspective': 'none'}\n",
+      "{'every': 'none'}\n",
+      "{'best': 'none', 'all': 'none', 'amend': 'none'}\n",
       "{'every': 'none', 'about': 'none', 'tend': 'none'}\n",
       "{'never': 'hedge', 'seem': 'hedge'}\n",
-      "{'all': 'none', 'believe': 'none'}\n",
-      "{'well': 'none'}\n"
+      "{'all': 'none', 'believe': 'hedge'}\n",
+      "{'take': 'none'}\n",
+      "{}\n",
+      "{'absolutely': 'authority'}\n",
+      "{}\n",
+      "{'all': 'none', 'clear': 'none', 'around': 'none', 'view': 'none', 'thing': 'none'}\n",
+      "{'all': 'none'}\n",
+      "{'all': 'none', 'about': 'none'}\n",
+      "{'every': 'none', 'thing': 'none'}\n",
+      "{'all': 'none', 'know': 'hedge', 'about': 'none', 'kind of': 'hedge', 'sort of': 'hedge', 'seem': 'hedge', 'question': 'none', 'thing': 'none', 'well': 'none'}\n",
+      "{'sometimes': 'hedge'}\n",
+      "{'certainly': 'authority', 'obvious': 'none', 'only': 'none', 'about': 'none', 'think': 'hedge', 'kind of': 'hedge', 'thing': 'none'}\n",
+      "{'only': 'none', 'imagine': 'none', 'well': 'none'}\n",
+      "{}\n",
+      "{'take': 'none'}\n",
+      "{'all': 'none', 'every': 'none', 'quite': 'none', 'wonder': 'none', 'well': 'none'}\n",
+      "{'maybe': 'hedge', 'sold': 'none'}\n",
+      "{'all': 'none'}\n",
+      "{'perspective': 'none'}\n",
+      "{'all': 'none'}\n",
+      "{}\n",
+      "{}\n",
+      "{'completely': 'none'}\n",
+      "{'all': 'none', 'every': 'none', 'obvious': 'none', 'essential': 'none', 'apparent': 'none', 'may': 'hedge', 'might': 'hedge', 'about': 'none', 'around': 'none', 'maybe': 'hedge', 'think': 'hedge', 'kind of': 'hedge', 'sort of': 'hedge', 'seem': 'hedge', 'posit': 'none', 'change': 'none', 'temper': 'none', 'certain': 'none', 'positive': 'none'}\n",
+      "{'all': 'none', 'every': 'none', 'quite': 'none', 'about': 'none', 'take': 'none'}\n",
+      "{'every': 'none'}\n",
+      "{'all': 'none', 'take': 'none'}\n",
+      "{'best': 'none', 'should': 'authority', 'about': 'none', 'take': 'none', 'view': 'none', 'question': 'none'}\n",
+      "{'all': 'none', 'change': 'none'}\n",
+      "{'all': 'none'}\n",
+      "{}\n",
+      "{}\n",
+      "{'all': 'none', 'about': 'none', 'question': 'none'}\n",
+      "{'well': 'none'}\n",
+      "{'truth': 'none', 'take': 'none'}\n",
+      "{'sometimes': 'hedge', 'about': 'none', 'reportedly': 'hedge', 'thing': 'none'}\n",
+      "{'view': 'none', 'torn': 'none'}\n",
+      "{'about': 'none'}\n",
+      "{'all': 'none', 'every': 'none', 'need to': 'authority', 'have to': 'authority', 'know': 'none', 'sure': 'none', 'about': 'none', 'around': 'none', 'thing': 'none'}\n",
+      "{'obvious': 'none', 'about': 'none'}\n",
+      "{'best': 'none', 'every': 'none', 'know': 'none', 'only': 'none', 'probably': 'hedge', 'maybe': 'hedge', 'thing': 'none'}\n",
+      "{'all': 'none', 'believe': 'none'}\n"
      ]
     }
    ],
@@ -286,28 +286,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "defaultdict(<class 'list'>, {'all': ['n', 'o', 'e']})\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 24\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[38;5;28mprint\u001b[39m(combined_matched_terms)\n\u001b[1;32m     23\u001b[0m         \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m---> 24\u001b[0m         \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m10\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# Check if any term has exactly one matched term\u001b[39;00m\n\u001b[1;32m     27\u001b[0m has_single_match_terms \u001b[38;5;241m=\u001b[39m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28mlen\u001b[39m(values) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m values \u001b[38;5;129;01min\u001b[39;00m combined_matched_terms\u001b[38;5;241m.\u001b[39mvalues())\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make Merged List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from util import group_by_key\n",
     "from collections import defaultdict\n",
@@ -347,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,6 +359,7 @@
     }
    ],
    "source": [
+    "mismatch_json = []\n",
     "json_data = merged_json\n",
     "# Initialize counters\n",
     "total_samples = len(json_data)\n",
@@ -394,6 +390,9 @@
     "        elif len(values) > 1:\n",
     "            total_length_more_than_one += 1\n",
     "            length_more_than_one_count += 1\n",
+    "            \n",
+    "    if length_more_than_one_count > 0:\n",
+    "        mismatch_json.append(sample)\n",
     "\n",
     "    # Check if all terms in a sample have lists of length 1\n",
     "    if length_one_count == sample_terms_count:\n",
@@ -415,58 +414,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "and: 462792\n",
-      "but: 447460\n",
-      "so: 419813\n",
-      "now: 395928\n",
-      "or: 391821\n",
-      "like: 360746\n",
-      "also: 340402\n",
-      "really: 322127\n",
-      "even: 297664\n",
-      "first: 296996\n",
-      "then: 287166\n",
-      "look: 267461\n",
-      "actually: 238482\n",
-      "next: 217319\n",
-      "well: 194280\n",
-      "listen: 83200\n",
-      "finally: 54925\n",
-      "totally: 35285\n",
-      "yes: 22851\n",
-      "oh: 14775\n",
-      "besides: 8540\n",
-      "un: 4137\n",
-      "genuinely: 3093\n",
-      "okay: 2047\n",
-      "hence: 1121\n",
-      "admittedly: 862\n",
-      "likewise: 662\n",
-      "er: 498\n",
-      "uh: 272\n",
-      "alright: 161\n",
-      "cr: 150\n",
-      "anyhow: 113\n",
-      "alternatively: 100\n",
-      "conversely: 95\n",
-      "em: 59\n",
-      "lol: 56\n",
-      "uhu: 1\n"
+      "Potential PRM Length: 48\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
    "source": [
     "from util import count_prms_in_utt, print_sorted_json\n",
     "# Filepaths for the JSON files\n",
-    "prms_filepath = 'data/prms.json'\n",
-    "large_json_filepath = 'data/news_dialogue_sample.json'\n",
+    "prms_filepath = 'data/short_prm_list.json'\n",
+    "large_json_filepath = 'data/news_dialogue.json'\n",
     "output_filepath = 'data/prms_sample_count.json'\n",
     "\n",
     "# Call the function on sample JSON\n",
@@ -478,14 +452,14 @@
     "# count_prms_in_utt(prms_filepath, large_json_filepath, output_filepath)\n",
     "\n",
     "# Path to the JSON file\n",
-    "input_filepath = 'data/prms_full_count.json'\n",
+    "input_filepath = 'data/prms_sample_count.json'\n",
     "# Call the function to print sorted JSON\n",
     "print_sorted_json(input_filepath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
