updated jupyter notebooks

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -57,6 +57,16 @@
     "\n",
     "# pull in transcript"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "For each transcript, get the details of the speakers that are provided\n",
+    "Ask GPT-4 to identify whether the speaker is a politician (and party), a journalist, or a member of the public"
+   ]
   }
  ],
  "metadata": {
