--- a/new_filtered_utterances.ipynb
+++ b/new_filtered_utterances.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "# Load your initial JSON data and the graded dataset\n",
     "with open('data/filtered_utterances.json', 'r') as file:\n",
-    "    json_data = json.load(file)\n",
+    "    merged_json = json.load(file)\n",
     "\n",
     "# Define the list of markers\n",
     "with open('data/short_prm_list.json', 'r') as merge_file:\n",
@@ -33,7 +33,7 @@
     "graded_statements = {item['statement'] for item in graded_data}\n",
     "\n",
     "\n",
-    "print(len(json_data))\n",
+    "print(len(merged_json))\n",
     "print(len(graded_statements))\n",
     "print(len(markers))"
    ]
@@ -1150,7 +1150,7 @@
     "i = 0\n",
     "j=0\n",
     "# Filter the data\n",
-    "for sample in json_data:\n",
+    "for sample in merged_json:\n",
     "    # Check if the statement has been graded already\n",
     "    if sample['statement'] not in graded_statements:\n",
     "        j+=1\n",
@@ -1224,6 +1224,343 @@
     "\n",
     "\n",
     "print(f\"Data split into {20} files with up to {samples_per_file} samples each.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "def load_json(filename):\n",
+    "    with open(filename, 'r') as file:\n",
+    "        return json.load(file)\n",
+    "\n",
+    "def combine_data(HN_part, MW_part):\n",
+    "    combined_data = []\n",
+    "    for hn, mw in zip(HN_part, MW_part):\n",
+    "        if hn['transcript_id'] == mw['transcript_id'] and hn['statement'] == mw['statement']:\n",
+    "            combined_terms = {}\n",
+    "            graders_count = 0\n",
+    "            for term, value in hn['matched_terms'].items():\n",
+    "                mw_value = mw['matched_terms'].get(term, 'ungraded')  # default to 'ungraded' if not found\n",
+    "                unique_values = {value, mw_value} - {\"ungraded\"}\n",
+    "                graders_count += len(unique_values)\n",
+    "                combined_terms[term] = list(unique_values)\n",
+    "            combined_data.append({\n",
+    "                \"transcript_id\": hn[\"transcript_id\"],\n",
+    "                \"matched_terms\": combined_terms,\n",
+    "                \"graders\": graders_count,\n",
+    "                \"previous_statement\": hn[\"previous_statement\"],\n",
+    "                \"statement\": hn[\"statement\"]\n",
+    "            })\n",
+    "    return combined_data\n",
+    "\n",
+    "base_path = 'data/graded_new/'\n",
+    "all_combined_data = []\n",
+    "\n",
+    "# Process files from part 1 to 20\n",
+    "for i in range(1, 21):\n",
+    "    hn_file = os.path.join(base_path, f'filtered_data_HN_part_{i}.json')\n",
+    "    mw_file = os.path.join(base_path, f'filtered_data_MW_part_{i}.json')\n",
+    "\n",
+    "    # Load data if both files exist\n",
+    "    if os.path.exists(hn_file) and os.path.exists(mw_file):\n",
+    "        HN_part = load_json(hn_file)\n",
+    "        MW_part = load_json(mw_file)\n",
+    "        combined_part = combine_data(HN_part, MW_part)\n",
+    "        all_combined_data.extend(combined_part)\n",
+    "\n",
+    "# Save the combined data to a file\n",
+    "with open('data/new_data/combined_data.json', 'w') as file:\n",
+    "    json.dump(all_combined_data, file, indent=4)\n",
+    "\n",
+    "print(\"Data combined and saved successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here's where the annotated samples merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Appended part 3\n",
+      "Appended part 4\n",
+      "Appended part 5\n",
+      "Appended part 6\n",
+      "Appended part 7\n",
+      "Appended part 8\n",
+      "Appended part 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "from util import group_by_key\n",
+    "import json\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "file_comparison = ['HNEB', 'MW_merge']\n",
+    "\n",
+    "with open(f\"data/filtered_utterances_sample_{file_comparison[0]}.json\", 'r') as file1:\n",
+    "    HN_part = json.load(file1)\n",
+    "with open(f\"data/filtered_utterances_sample_{file_comparison[1]}.json\", 'r') as file2:\n",
+    "    MW_part = json.load(file2)\n",
+    "    \n",
+    "for i in range(3, 10):\n",
+    "    with open(f'data/graded_new/filtered_data_HN_part_{i}.json', 'r') as file:\n",
+    "        HN_part += json.load(file)\n",
+    "\n",
+    "    with open(f'data/graded_new/filtered_data_MW_part_{i}.json', 'r') as file:\n",
+    "        MW_part += json.load(file)\n",
+    "    print(f\"Appended part {i}\")\n",
+    "\n",
+    "grouped_json1 = group_by_key(HN_part)\n",
+    "grouped_json2 = group_by_key(MW_part)\n",
+    "\n",
+    "# Finding common keys\n",
+    "common_keys = set(grouped_json1.keys()).intersection(grouped_json2.keys())\n",
+    "\n",
+    "# Merging matched terms for common keys\n",
+    "merged_json = []\n",
+    "for key in common_keys:\n",
+    "    combined_matched_terms = defaultdict(list)\n",
+    "    for item in grouped_json1[key] + grouped_json2[key]:\n",
+    "        for term, value in item['matched_terms'].items():\n",
+    "            if value not in combined_matched_terms[term]:\n",
+    "                combined_matched_terms[term].append(value)\n",
+    "                \n",
+    "    \n",
+    "    # Create a new entry for each common key with merged matched terms\n",
+    "    new_entry = {\n",
+    "        \"transcript_id\": key[0],\n",
+    "        \"matched_terms\": dict(combined_matched_terms),\n",
+    "        \"previous_statement\": grouped_json1[key][0][\"previous_statement\"],  # Example, using the first found\n",
+    "        \"statement\": key[1]\n",
+    "    }\n",
+    "    merged_json.append(new_entry)\n",
+    "\n",
+    "# Print or process the resulting merged_json\n",
+    "# print(merged_json)\n",
+    "\n",
+    "# Output the sampled data as a JSON file\n",
+    "with open('data/graded_new/new_filtered_data_combined.json', 'w') as file:\n",
+    "    json.dump(merged_json, file, indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of samples:       800\n",
+      "Total number of matched terms: 1895\n",
+      "Total number of statement with match: 599\n",
+      "Terms per sample utterance:    2.37\n",
+      "Perfect Match Terms:           61.3%  (1161/1895)\n",
+      "PrM Positive Match Count:           506\n",
+      "Total Match Statements:        20.0%  ( 160/ 800)\n"
+     ]
+    }
+   ],
+   "source": [
+    "mismatch_json = []\n",
+    "\n",
+    "# Initialize counters\n",
+    "total_samples = len(merged_json)\n",
+    "total_matched_terms = 0\n",
+    "total_length_one = 0\n",
+    "total_length_more_than_one = 0\n",
+    "all_length_one = 0\n",
+    "any_length_more_than_one = 0\n",
+    "actual_prm = 0\n",
+    "statement_with_match = 0\n",
+    "# Analysis of each sample\n",
+    "for sample in merged_json:\n",
+    "    matched_terms = sample['matched_terms']\n",
+    "    sample_terms_count = len(matched_terms)\n",
+    "    total_matched_terms += sample_terms_count\n",
+    "    sample_contains_match = 0\n",
+    "\n",
+    "    length_one_count = False\n",
+    "    length_more_than_one_count = 0\n",
+    "\n",
+    "    for term, values in matched_terms.items():\n",
+    "        if len(values) == 1:\n",
+    "            length_one_count = True\n",
+    "            total_length_one += 1\n",
+    "            length_one_count += 1\n",
+    "            if values[0] == \"hedge\":\n",
+    "                actual_prm+=1\n",
+    "            if values[0] == \"authority\":\n",
+    "                actual_prm+=1\n",
+    "        elif len(values) > 1:\n",
+    "            total_length_more_than_one += 1\n",
+    "            length_more_than_one_count += 1\n",
+    "            \n",
+    "    if length_more_than_one_count > 0:\n",
+    "        mismatch_json.append(sample)\n",
+    "\n",
+    "    # Check if all terms in a sample have lists of length 1\n",
+    "    if length_one_count == sample_terms_count:\n",
+    "        all_length_one += 1\n",
+    "    \n",
+    "    # Check if any term in a sample has a list longer than 1\n",
+    "    if length_more_than_one_count > 0:\n",
+    "        any_length_more_than_one += 1\n",
+    "    \n",
+    "    if length_one_count:\n",
+    "        statement_with_match+=1\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Printing the results\n",
+    "print(\"Total number of samples:      \", total_samples)\n",
+    "print(\"Total number of matched terms:\", total_matched_terms)\n",
+    "print(\"Total number of statement with match:\", statement_with_match)\n",
+    "print(f\"Terms per sample utterance:    {total_matched_terms / total_samples:.2f}\")\n",
+    "print(f\"Perfect Match Terms:           {round(100*total_length_one / total_matched_terms, 1)}%  ({total_length_one}/{total_matched_terms})\")\n",
+    "print(f\"PrM Positive Match Count:           {actual_prm}\")\n",
+    "print(f\"Total Match Statements:        {round(100*all_length_one / total_samples, 1)}%  ( {all_length_one}/ {total_samples})\")\n",
+    "# print(\"Total samples where at least one matched term has list length > 1:\", any_length_more_than_one)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final Length: 599\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import uuid\n",
+    "\n",
+    "# Load the JSON data from a file\n",
+    "with open(\"data/graded_new/new_filtered_data_combined.json\", 'r') as file1:\n",
+    "    data = json.load(file1)  # Changed variable name from 'json' to 'data'\n",
+    "final_list = []\n",
+    "# Iterate through each item in the data list\n",
+    "for item in data:\n",
+    "    # Print each term in the 'matched_terms' dictionary\n",
+    "    PrMs = {}\n",
+    "    for key, value in item['matched_terms'].items():\n",
+    "        if len(value) == 1:\n",
+    "        #    print(key, value)\n",
+    "           PrMs[key] = {\"correct\": value[0]}\n",
+    "    # print(PrMs)\n",
+    "    if len(PrMs)>0:\n",
+    "        sample = {\n",
+    "            \"transcript_id\": item['transcript_id'],\n",
+    "            \"statement_id\": str(uuid.uuid4()),  # Generate a random UUID for the 'statement_id\n",
+    "            \"matched_terms\": PrMs,\n",
+    "            \"previous_statement\": item['previous_statement'],\n",
+    "            \"statement\": item['statement']\n",
+    "        }\n",
+    "        # print(sample)\n",
+    "        final_list.append(sample)\n",
+    "\n",
+    "# Convert all sets to lists in the final_list\n",
+    "def convert_sets_to_lists(item):\n",
+    "    if isinstance(item, set):\n",
+    "        return list(item)\n",
+    "    elif isinstance(item, dict):\n",
+    "        return {key: convert_sets_to_lists(value) for key, value in item.items()}\n",
+    "    elif isinstance(item, list):\n",
+    "        return [convert_sets_to_lists(element) for element in item]\n",
+    "    else:\n",
+    "        return item\n",
+    "\n",
+    "final_list_converted = [convert_sets_to_lists(item) for item in final_list]\n",
+    "\n",
+    "with open('data/human_annotated_dataset.json', 'w') as file:\n",
+    "    json.dump(final_list_converted, file, indent=4)\n",
+    "    \n",
+    "print(\"Final Length:\", len(final_list_converted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Update Model Responses to add in new samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data merge complete.\n",
+      "Total Statements: 599\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "# Step 1: Read the existing data\n",
+    "with open('data/human_annotated_model_response.json', 'r') as f:\n",
+    "    existing_data = json.load(f)\n",
+    "\n",
+    "# Step 2: Read the new data\n",
+    "with open('data/human_annotated_dataset.json', 'r') as f:\n",
+    "    new_data = json.load(f)\n",
+    "\n",
+    "# Step 3: Create a function to match and merge records\n",
+    "def merge_records(existing, new):\n",
+    "    existing_lookup = {(item['transcript_id'], item['previous_statement']): item for item in existing}\n",
+    "    \n",
+    "    for new_item in new:\n",
+    "        key = (new_item['transcript_id'], new_item['previous_statement'])\n",
+    "        if key in existing_lookup:\n",
+    "            asdfsdaf = 0\n",
+    "            # Update the existing record with the new data (assuming the new data has the same format)\n",
+    "            \n",
+    "        else:\n",
+    "            # If the new item doesn't exist in the existing data, add it\n",
+    "            existing.append(new_item)\n",
+    "    \n",
+    "    return existing\n",
+    "\n",
+    "# Step 4: Merge the records\n",
+    "updated_data = merge_records(existing_data, new_data)\n",
+    "\n",
+    "# Step 5: Write the updated data back to the file\n",
+    "with open('data/human_annotated_model_response.json', 'w') as f:\n",
+    "    json.dump(updated_data, f, indent=4)\n",
+    "\n",
+    "print(\"Data merge complete.\")\n",
+    "print(\"Total Statements:\", len(updated_data))\n"
    ]
   }
  ],
