--- a/public_model_benchmarks.ipynb
+++ b/public_model_benchmarks.ipynb
@@ -6,25 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from prompts import system_prompt\n",
-    "\n",
-    "system_prompt = \"\"\"You are a linguist analyzing dialogue transcripts for examples of \"hedging\" or \"authority\" pragmatic markers. The terms are provided in a list, and in the transcript the terms are capitalized within <> (e.g. <ABSOLUTELY>). Provide an answer for every single term in the list of \"terms\" you are given. Return your answer in the following JSON format:\n",
-    "\n",
-    "---BEGIN SAMPLE INPUT---\n",
-    "terms: [\"believe\", \"maybe\", \"certainly\", \"best\"]\n",
-    "transcript:\n",
-    "Speaker 1: \"In the run for the presidency.\"\n",
-    "Speaker 2: \"I knew about one incident. Understand the whole time that he ran for office, I knew that he had had one liaison. It still -- it still tore me up, I mean, personally tore me up. Did I think that one liaison would disqualify him to be the president? You know, we've had great presidents who I would hope one liaison would not have -- have stopped from serving us. That's what I believed. And I believed that until, golly, <MAYBE> long after it made any sense to but, <CERTAINLY> long after -- I mean, long after he was out of the race. And so sometimes I had to, you know, bite my tongue. I talked a lot about his policies, which I still <BELIEVE> were the <BEST> policies and set the standard for the other candidates on a lot of issues -- health care being one of them, but environment and poverty and corporate interference with government. And I really believed that that I could talk about those things and mean every word that I was saying, and have him as an advocate for those issues and meaning that as well.\"\n",
-    "---END SAMPLE INPUT---\n",
-    "\n",
-    "---BEGIN SAMPLE RESPONSE---\n",
-    "    {{\n",
-    "        \"believe\": \"hedge\",\n",
-    "        \"maybe\": \"hedge\",\n",
-    "        \"certainly\": \"authority\",\n",
-    "        \"best\": \"none\"\n",
-    "    }}\n",
-    "---END SAMPLE RESPONSE---\"\"\""
+    "from prompts import system_prompt\n",
+    "\n"
    ]
   },
   {
