--- a/public_model_benchmarks.ipynb
+++ b/public_model_benchmarks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "models_list = [\"correct\", \"gpt-3.5-turbo\", \"gpt-4o\", \"gpt-4-turbo\", \"gemini-1.5-flash\"]"
+    "models_list = [\"correct\", \"gpt-3.5-turbo\", \"gpt-4o\", \"gpt-4-turbo\", \"gemini-1.5-flash\", \"gemini-1.5-pro\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -295,28 +295,18 @@
      "text": [
       "Loaded 599 examples from data/human_annotated_model_response.json\n",
       "Processed and saved 100 samples, with 0 Gemini samples\n",
-      "Processed and saved 200 samples, with 0 Gemini samples\n",
-      "Processed and saved 300 samples, with 0 Gemini samples\n",
-      "Processed and saved 400 samples, with 0 Gemini samples\n",
-      "Processed and saved 438 samples, with 14 Gemini samples\n",
-      "Processed and saved 453 samples, with 29 Gemini samples\n",
-      "Processed and saved 468 samples, with 44 Gemini samples\n",
-      "Processed and saved 483 samples, with 59 Gemini samples\n",
-      "Processed and saved 498 samples, with 74 Gemini samples\n",
-      "Processed and saved 500 samples, with 76 Gemini samples\n",
-      "Processed and saved 513 samples, with 89 Gemini samples\n",
-      "Processed and saved 528 samples, with 104 Gemini samples\n",
-      "Processed and saved 543 samples, with 119 Gemini samples\n",
-      "Processed and saved 558 samples, with 134 Gemini samples\n",
-      "Processed and saved 573 samples, with 149 Gemini samples\n",
-      "Processed and saved 588 samples, with 164 Gemini samples\n",
+      "Processed and saved 200 samples, with 1 Gemini samples\n",
+      "Processed and saved 300 samples, with 1 Gemini samples\n",
+      "Processed and saved 400 samples, with 1 Gemini samples\n",
+      "Processed and saved 500 samples, with 1 Gemini samples\n",
       "\n",
       "Model Tally:\n",
       " correct: 599\n",
       " gpt-3.5-turbo: 599\n",
       " gpt-4o: 599\n",
       " gpt-4-turbo: 599\n",
-      " gemini-1.5-flash: 599\n"
+      " gemini-1.5-flash: 599\n",
+      " gemini-1.5-pro: 599\n"
      ]
     }
    ],
@@ -374,7 +364,8 @@
     "                    tally[model_name] += 1\n",
     "                    i+=1\n",
     "                except Exception as e:\n",
-    "                    print(f\"Error on {model_name}: {e}, on string: {string}\")\n",
+    "                    print(f\"Error on {model_name}: {e}\")\n",
+    "                    # print(f\"Error on {model_name}: {e}, on string: {string}\")\n",
     "            else:\n",
     "                \"Model Not Recognized\"\n",
     "\n",
@@ -424,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,6 +559,34 @@
       "Average Precision: 0.7242\n",
       "Average Recall: 0.6098\n",
       "Total Accuracy: 0.6296\n",
+      "\n",
+      "\n",
+      "\n",
+      "############################################################\n",
+      "Results for Model: gemini-1.5-pro\n",
+      " * Class: none\n",
+      "   F1 Score: 0.6524\n",
+      "   Precision: 0.4901\n",
+      "   Recall: 0.9757\n",
+      "   Accuracy: 0.4842\n",
+      "\n",
+      " * Class: hedge\n",
+      "   F1 Score: 0.7929\n",
+      "   Precision: 0.9637\n",
+      "   Recall: 0.6735\n",
+      "   Accuracy: 0.6569\n",
+      "\n",
+      " * Class: authority\n",
+      "   F1 Score: 0.4060\n",
+      "   Precision: 0.8308\n",
+      "   Recall: 0.2687\n",
+      "   Accuracy: 0.2547\n",
+      "\n",
+      "Overall Model Performance:\n",
+      "Average F1 Score: 0.6171\n",
+      "Average Precision: 0.7615\n",
+      "Average Recall: 0.6393\n",
+      "Total Accuracy: 0.6891\n",
       "\n",
       "\n",
       "\n"
