--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -24,6 +24,93 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import BertTokenizer, BertForTokenClassification\n",
+    "\n",
+    "# Replace these with the actual directory paths where you saved your model and tokenizer\n",
+    "model_directory = 'data/models/model_epochs-6_batch-8_2024-06-05_00-15-10'\n",
+    "tokenizer_directory = 'data//models/tokenizer_epochs-6_batch-8_2024-06-05_00-15-10'\n",
+    "\n",
+    "# Load the tokenizer\n",
+    "tokenizer = BertTokenizer.from_pretrained(tokenizer_directory)\n",
+    "\n",
+    "# Load the model\n",
+    "model = BertForTokenClassification.from_pretrained(model_directory)\n",
+    "\n",
+    "label_map = {0: \"none\", 1: \"hedge\", 2: \"authority\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CLS]: none\n",
+      "i: none\n",
+      "': authority\n",
+      "m: none\n",
+      "not: none\n",
+      "sure: none\n",
+      "if: none\n",
+      "i: none\n",
+      "can: none\n",
+      "make: none\n",
+      "it: none\n",
+      "to: none\n",
+      "the: none\n",
+      "party: none\n",
+      "[SEP]: none\n"
+     ]
+    }
+   ],
+   "source": [
+    "def classify_tokens(input_text, model, tokenizer, label_map):\n",
+    "    # Tokenize the input text\n",
+    "    inputs = tokenizer(input_text, return_tensors=\"pt\", truncation=True, max_length=512, padding=\"max_length\")\n",
+    "\n",
+    "    # Identify the pad token index\n",
+    "    pad_token_id = tokenizer.pad_token_id\n",
+    "\n",
+    "    # Move tensors to the same device as model\n",
+    "    input_ids = inputs['input_ids'].to(model.device)\n",
+    "    attention_mask = inputs['attention_mask'].to(model.device)\n",
+    "\n",
+    "    # Predict\n",
+    "    model.eval()  # Set the model to evaluation mode\n",
+    "    with torch.no_grad():\n",
+    "        outputs = model(input_ids, attention_mask=attention_mask)\n",
+    "    \n",
+    "    # Get the predictions\n",
+    "    logits = outputs.logits\n",
+    "    predictions = torch.argmax(logits, dim=-1)\n",
+    "\n",
+    "    # Convert predictions to label names, ignoring padding tokens\n",
+    "    predicted_labels = []\n",
+    "    tokens = tokenizer.convert_ids_to_tokens(input_ids[0])\n",
+    "    for token, pred_label_id in zip(tokens, predictions[0].cpu().numpy()):\n",
+    "        if input_ids[0][tokens.index(token)] != pad_token_id:\n",
+    "            predicted_labels.append((token, label_map[pred_label_id]))\n",
+    "\n",
+    "    return predicted_labels\n",
+    "\n",
+    "# Example usage\n",
+    "input_text = \"I'm not sure if I can make it to the party\"\n",
+    "label_map = {0: \"none\", 1: \"hedge\", 2: \"authority\"}  # This should match the label_map used during training\n",
+    "results = classify_tokens(input_text, model, tokenizer, label_map)\n",
+    "\n",
+    "for token, label in results:\n",
+    "    print(f\"{token}: {label}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
