--- a/embedding_powered_inference.ipynb
+++ b/embedding_powered_inference.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,18 +128,20 @@
     "        embeddings = output.last_hidden_state.detach().numpy()  # Shape: (batch_size, sequence_length, hidden_size)\n",
     "        tokens = tokenizer.convert_ids_to_tokens(encoded_input['input_ids'][0])\n",
     "        \n",
+    "        # Extracting \"correct\" values from matched_terms\n",
+    "        correct_terms = {term: details['correct'] for term, details in item['matched_terms'].items()}\n",
+    "        \n",
     "        result = {\n",
     "            'transcript_id': item['transcript_id'],\n",
     "            'statement_id': item['statement_id'],\n",
     "            'original_string': string,\n",
     "            'tokens': tokens,\n",
     "            'embeddings': embeddings[0],  # Keep as numpy array\n",
-    "            'matched_terms': item['matched_terms']\n",
+    "            'matched_terms': correct_terms  # Dictionary with 'correct' values\n",
     "        }\n",
     "        results.append(result)\n",
     "    return results\n",
     "\n",
-    "import h5py\n",
     "def save_to_hdf5(data, output_file = 'data/contextual_embeddings_with_metadata.h5'):\n",
     "    with h5py.File(output_file, 'w') as f:\n",
     "        for idx, item in enumerate(data):\n",
@@ -155,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,84 +187,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Term: know\n",
-      "  none: 16\n",
-      "  authority: 8\n",
-      "  hedge: 15\n",
-      "Term: about\n",
-      "  none: 52\n",
-      "  hedge: 3\n",
-      "Term: may\n",
-      "  hedge: 19\n",
-      "  none: 1\n",
-      "  authority: 1\n",
-      "Term: might\n",
-      "  hedge: 11\n",
-      "  none: 1\n",
-      "Term: believe\n",
-      "  none: 6\n",
-      "  hedge: 4\n",
-      "  authority: 1\n",
-      "Term: around\n",
-      "  none: 14\n",
-      "  hedge: 1\n",
-      "Term: fact\n",
-      "  authority: 7\n",
-      "  none: 1\n",
-      "  hedge: 1\n",
-      "Term: well\n",
-      "  none: 41\n",
-      "  hedge: 3\n",
-      "Term: quite\n",
-      "  none: 4\n",
-      "  hedge: 1\n",
-      "Term: appear\n",
-      "  none: 2\n",
-      "  hedge: 2\n",
-      "Term: think\n",
-      "  hedge: 35\n",
-      "  none: 7\n",
-      "  authority: 3\n",
-      "Term: should\n",
-      "  hedge: 1\n",
-      "  authority: 11\n",
-      "  none: 2\n",
-      "Term: kind of\n",
-      "  none: 2\n",
-      "  hedge: 13\n",
-      "Term: sure\n",
-      "  hedge: 4\n",
-      "  none: 3\n",
-      "  authority: 1\n",
-      "Term: thought\n",
-      "  none: 5\n",
-      "  hedge: 2\n",
-      "Term: could\n",
-      "  hedge: 15\n",
-      "  none: 5\n",
-      "  authority: 1\n",
-      "Term: hope\n",
-      "  hedge: 1\n",
-      "  none: 1\n",
-      "Term: clear\n",
-      "  none: 5\n",
-      "  authority: 1\n",
-      "Term: doubt\n",
-      "  none: 3\n",
-      "  authority: 1\n",
-      "Term: tend\n",
-      "  none: 2\n",
-      "  hedge: 1\n",
-      "Term: feel\n",
-      "  none: 2\n",
-      "  hedge: 1\n"
+      "{'thinking': {'correct': 'none'}}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[17], line 20\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m term \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m term_counts:\n\u001b[1;32m     19\u001b[0m                 term_counts[term] \u001b[38;5;241m=\u001b[39m Counter()\n\u001b[0;32m---> 20\u001b[0m             term_counts[term][value] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# Output the results\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m term, counts \u001b[38;5;129;01min\u001b[39;00m term_counts\u001b[38;5;241m.\u001b[39mitems():\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'dict'"
      ]
     }
    ],
@@ -278,8 +221,10 @@
     "with h5py.File(contextual_embeddings, 'r') as f:\n",
     "    # Iterate through each item in the HDF5 data\n",
     "    for idx in f.keys():\n",
+    "        # print(idx)\n",
     "        group = f[idx]\n",
     "        matched_terms = eval(group['matched_terms'][()].decode('utf-8'))\n",
+    "        print(matched_terms)\n",
     "        \n",
     "        for term, value in matched_terms.items():\n",
     "            if term not in term_counts:\n",
@@ -2083,21 +2028,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Category: hedge - 128 sample sentences found.\n",
-      "Category: authority - 39 sample sentences found.\n",
-      "transcript_id\n",
-      "statement_id\n",
-      "original_string\n",
-      "tokens\n",
-      "embeddings\n",
-      "matched_terms\n"
+      "Category: hedge - 0 sample sentences found.\n",
+      "Category: authority - 0 sample sentences found.\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'dict'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 17\u001b[0m\n\u001b[1;32m     14\u001b[0m authority_items \u001b[38;5;241m=\u001b[39m get_category(data, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mauthority\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# for item in authority_items[:10]:\u001b[39;00m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m#     print(item['matched_terms'])\u001b[39;00m\n\u001b[0;32m---> 17\u001b[0m dual_items \u001b[38;5;241m=\u001b[39m \u001b[43mget_dual_matches\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# for item in hedge_items[1]:\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m#     print(item)\u001b[39;00m\n",
+      "File \u001b[0;32m~/PoliticalTextandAttitudes/util.py:224\u001b[0m, in \u001b[0;36mget_dual_matches\u001b[0;34m(h5_file)\u001b[0m\n\u001b[1;32m    222\u001b[0m             \u001b[38;5;28;01mif\u001b[39;00m term \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m term_counts:\n\u001b[1;32m    223\u001b[0m                 term_counts[term] \u001b[38;5;241m=\u001b[39m Counter()\n\u001b[0;32m--> 224\u001b[0m             term_counts[term][value] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m    226\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m term_counts\n",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'dict'"
      ]
     }
    ],
@@ -2119,8 +2070,8 @@
     "# for item in authority_items[:10]:\n",
     "#     print(item['matched_terms'])\n",
     "dual_items = get_dual_matches(data)\n",
-    "for item in hedge_items[1]:\n",
-    "    print(item)"
+    "# for item in hedge_items[1]:\n",
+    "#     print(item)"
    ]
   },
   {
@@ -2155,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
